inicie el proyecto hice un navbar y un caroucel ambos personalizados

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <a class="nav-link text-reset" href="./html/prefre.html">ubicacion</a>
               </li>
               <li class="nav-item">
-                direccion: florida 765 <br>
-                wasap: 1130484191
+                direccion : florida 765 <br>
+                wahtsapp : 1130484191
               </li>
               
             </ul>
@@ -63,9 +63,9 @@
               <div class="carousel-item">
                 <img src="./img/fondo3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>atencion personalizada</h1>
+                    <h1>Atencion personalizada</h1>
                     <button class="boton"><h3>Contactanos</h3></button>
-                    <h2>Nuestro wahtsapp respondemos todas tus dudas y tu ayudamos a tomar la mejor decicion</h2>
+                    <h2>Nuestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
                 </div>
               </div>
             </div>
