sume la seccion de ubicacion y servicios

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
@@ -25,10 +26,10 @@
                 <a class="nav-link text-reset" aria-current="page" href="index.html">servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="./html/nosotros.html">nosotros</a>
+                <a class="nav-link text-reset" href="index.html">nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="./html/prefre.html">ubicacion</a>
+                <a class="nav-link text-reset" href="index.html">ubicacion</a>
               </li>
               <li class="nav-item">
                 direccion : florida 765 <br>
@@ -57,7 +58,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
                     <button class="boton"><h3>Contactanos</h3></button>
-                    <h2>Estas a solo un click de nuestros profecionales que estaran a tu disposicion.</h2>
+                    <h2>Estas a solo un click de nuestros profesionales que estaran a tu disposicion.</h2>
                 </div>
               </div>
               <div class="carousel-item">
@@ -65,7 +66,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h1>Atencion personalizada</h1>
                     <button class="boton"><h3>Contactanos</h3></button>
-                    <h2>Nuestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
+                    <h2>En muestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
                 </div>
               </div>
             </div>
@@ -78,6 +79,48 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+      </section>
+      <section class="ubicacion">
+        <div class="sucursal1">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0182011064708!2d-58.37772422477146!3d-34.60370125749644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacdaf8a1517%3A0x5d271d79bddc7147!2sEstudio%20Cadoche!5e0!3m2!1ses-419!2sar!4v1694572066874!5m2!1ses-419!2sar" class="mapa" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="sucursal2">
+          <h2>Ubicacion</h2>
+          <p>Te esperamos en nuestro estudio visitanos y conoce nuestro equipo capasitado para darte una experiencia que necesitas patra tu caso, estaras tranquilo bajo la defenza de nuestros profecionales</p>
+
+        </div>
+
+      </section>
+      <section class="servicios">
+        <h2>Servicios</h2>
+        <div class="serv">
+          <div class="servIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+              <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            </svg>
+            <h4>atencion personalizada las 24 horas</h2>
+          </div>
+          <div class="servIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
+              <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
+              <path d="M8.256 14a4.474 4.474 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10c.26 0 .507.009.74.025.226-.341.496-.65.804-.918C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4s1 1 1 1h5.256Z"/>
+            </svg>
+            <h4>Mediaciones</h4>
+          </div>
+          <div class="servIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-vector-pen" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M10.646.646a.5.5 0 0 1 .708 0l4 4a.5.5 0 0 1 0 .708l-1.902 1.902-.829 3.313a1.5 1.5 0 0 1-1.024 1.073L1.254 14.746 4.358 4.4A1.5 1.5 0 0 1 5.43 3.377l3.313-.828L10.646.646zm-1.8 2.908-3.173.793a.5.5 0 0 0-.358.342l-2.57 8.565 8.567-2.57a.5.5 0 0 0 .34-.357l.794-3.174-3.6-3.6z"/>
+              <path fill-rule="evenodd" d="M2.832 13.228 8 9a1 1 0 1 0-1-1l-4.228 5.168-.026.086.086-.026z"/>
+            </svg>
+            <h4>Demandas Judiciales</h4>
+          </div>
+          <div class="servIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
+              <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
+            </svg>
+            <h4>Asesoramiento Legal</h4>
+          </div>
+        </div>
       </section>
     
 
