animaciones links para wasap y flotador de wasap

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Estudios Cadoche</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+  <div class="btn-ws">
+    <a href="https://api.whatsapp.com/send?phone=Tu-1" target="_blank" ><img src="./img/whatsapp.png" class="icon-ws" alt=""></a>
+  </div>
+  <nav class="navbar navbar-expand-lg">
         <div class="container-fluid ">
             <a class="logo navbar-brand" href="index.html"><img src="./img/logo.png" alt="logo aya" width="120px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +59,7 @@
                 <img src="./img/fondo.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="estudio">Estudios Cadoche</h1>
-                    <button class="boton"><h3>Contactanos</h3></button>
+                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
                     
                 </div>
@@ -65,7 +68,7 @@
                 <img src="./img/fondo2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
-                    <button class="boton"><h3>Contactanos</h3></button>
+                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">Estas a solo un click de nuestros profesionales que estaran a tu disposicion.</h2>
                 </div>
               </div>
@@ -73,7 +76,7 @@
                 <img src="./img/fondo3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="atnP">Atencion Personalizada</h1>
-                    <button class="boton"><h3>Contactanos</h3></button>
+                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">En muestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
                 </div>
               </div>
