--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <a href="https://api.whatsapp.com/send?phone=Tu-1" target="_blank" ><img src="./img/whatsapp.png" class="icon-ws" alt=""></a>
   </div>
   <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid ">
-            <a class="logo navbar-brand" href="index.html"><img src="./img/logo.png" alt="logo aya" width="120px"></a>
+        <div class="container-fluid">
+            <a class="logo navbar-brand" href="index.html"><img src="./img/logo.png" class="logoEC" alt="logo aya"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-          <div class="collapse navbar-collapse col-md-auto" id="navbarSupportedContent">
+          <div class="desplegable collapse navbar-collapse col-md-auto" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active  text-reset" aria-current="page" href="index.html">INICIO</a>
@@ -56,7 +56,7 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./img/fondo.jpg" class="d-block w-100" alt="...">
+                <img src="./img/fondo.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="estudio">Estudios Cadoche</h1>
                     <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/fondo2.jpg" class="d-block w-100" alt="...">
+                <img src="./img/fondo2.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
                     <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
@@ -73,7 +73,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/fondo3.jpg" class="d-block w-100" alt="...">
+                <img src="./img/fondo3.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="atnP">Atencion Personalizada</h1>
                     <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
@@ -91,6 +91,70 @@
             </button>
           </div>
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <section class="dispMovil">
+          <div class="estudioMovil">
+            <h1 class="titulo tituloMovil ">Estudios Cadoche</h1>
+            <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
+            <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
+          </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <section class="referencia">
           
         </section>
