retoques finales solo resta hacer funcuonar el formulario y poner los numerpo de wasap

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <a class="nav-link active  text-reset" aria-current="page" href="index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" aria-current="page" href="index.html">SERVICIOS</a>
+                <a class="nav-link text-reset" aria-current="page" href="#servicios">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="index.html">NOSOTROS</a>
+                <a class="nav-link text-reset" href="#nosotros">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="index.html">CONTACTO</a>
+                <a class="nav-link text-reset" href="#contacto">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="index.html">UBICACION</a>
+                <a class="nav-link text-reset" href="#ubicacion">UBICACION</a>
               </li>
               <li class="nav-item ubiWsp">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -98,26 +98,18 @@
             <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
           </div>
         </section>
-
-
-
-
         <section class="referencia">
-          
         </section>
-
-
-        
-        <section class="ubicacion">
+        <section class="ubicacion" id="ubicacion">
           <div class="sucursal1">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0182011064708!2d-58.37772422477146!3d-34.60370125749644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacdaf8a1517%3A0x5d271d79bddc7147!2sEstudio%20Cadoche!5e0!3m2!1ses-419!2sar!4v1694572066874!5m2!1ses-419!2sar" class="mapa" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <div class="sucursal2">
+          <div class="sucursal2" id="#ubicacion">
             <h2>Ubicacion</h2>
             <p>Te esperamos en nuestro estudio visitanos y conoce nuestro equipo capasitado para darte una experiencia que necesitas patra tu caso, estaras tranquilo bajo la defenza de nuestros profecionales</p>
           </div>
         </section>
-      <section class="servicios">
+      <section class="servicios" id="servicios">
         <h2>Servicios</h2>
         <div class="serv">
           <div class="servIcon">
@@ -148,7 +140,7 @@
           </div>
         </div>
       </section>
-      <section class="nosotros">
+      <section class="nosotros" id="nosotros">
         <div class="reseña">
           <h2>Nosotros</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ea possimus provident dolorum officia repudiandae veniam vel quidem ut, maxime molestiae corrupti illo consequuntur? Voluptatibus minus quasi laudantium aperiam itaque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus sint voluptatem aperiam sapiente molestias obcaecati quam exercitationem magnam error dolorem tenetur blanditiis unde, dignissimos, quidem, earum consectetur veniam? Totam, voluptas! "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit laboriosam officia laudantium iure praesentium voluptatem nisi ipsam, tempora aspernatur nostrum repudiandae mollitia cupiditate laborum repellat quidem, incidunt sed, eaque optio.</p>
@@ -157,7 +149,7 @@
           <img src="./img/nosotros.jpg" class="imgNosotros" alt="">
         </div>
       </section>
-      <section class="contactanos">
+      <section class="contactanos" id="contacto">
         <h2 class="tc">Contacto</h2>        
         <div class="contacto">
         <div class="cont1">
@@ -182,7 +174,7 @@
         </div>
       </div>
       </section>
-      <section class="accidente">
+      <section class="accidente" id="accidente">
         <div class="auto">
           <img src="./img/accidente.jpg" class="autoImg" alt="">
 
@@ -191,7 +183,7 @@
           <h2>Nos especializamos en accidentes de transito.</h2>
         </div>
       </section>
-      <section class="infoCliente">
+      <section class="infoCliente" id="formulario">
         <div class="prefiere">
           <h2>Si prefieres que te contactemos nosotros dejanos tu informacion</h2>
         </div>
