--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="btn-ws">
-    <a href="https://api.whatsapp.com/send?phone=Tu-1" target="_blank" ><img src="./img/whatsapp.png" class="icon-ws" alt=""></a>
+    <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank" ><img src="./img/whatsapp.png" class="icon-ws" alt=""></a>
   </div>
   <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -44,7 +44,7 @@
                 </svg> florida 765 <br>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                   <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-                </svg> 1130484191
+                </svg> <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"> 1130484191</a>
               </li>
               
             </ul>
@@ -59,7 +59,7 @@
                 <img src="./img/fondo.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="estudio">Estudios Cadoche</h1>
-                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
+                    <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
                     
                 </div>
@@ -68,7 +68,7 @@
                 <img src="./img/fondo2.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
-                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
+                    <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">Estas a solo un click de nuestros profesionales que estaran a tu disposicion.</h2>
                 </div>
               </div>
@@ -76,7 +76,7 @@
                 <img src="./img/fondo3.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="atnP">Atencion Personalizada</h1>
-                    <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
+                    <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">En muestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
                 </div>
               </div>
@@ -94,7 +94,7 @@
         <section class="dispMovil">
           <div class="estudioMovil">
             <h1 class="titulo tituloMovil ">Estudios Cadoche</h1>
-            <a href="https://api.whatsapp.com/send?phone=Tu-n%C3%B9mero-aqu%C3%AD"><button class="boton"><h3>Contactanos</h3></button></a>
+            <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
             <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
           </div>
         </section>
@@ -187,7 +187,7 @@
         <div class="prefiere">
           <h2>Si prefieres que te contactemos nosotros dejanos tu informacion</h2>
         </div>
-        <form action="">
+        <form action="https://formsubmit.co/barriosarom@gmail.com" method="POST">
           <div class="formulario">
             <label for="nombre"> Nombre </label>
             <input type="text" name="nombre" id="nombre" placeholder="ejemplo">
