corregi errores ortograficos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </svg> florida 765 <br>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                   <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-                </svg> <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"> 1130484191</a>
+                </svg> <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank">1161433236</a>
               </li>
               
             </ul>
@@ -60,7 +60,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="estudio">Estudios Cadoche</h1>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-                    <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
+                    <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral.</h2>
                     
                 </div>
               </div>
@@ -69,7 +69,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-                    <h2 class="titulo2">Estas a solo un click de nuestros profesionales que estaran a tu disposicion.</h2>
+                    <h2 class="titulo2">Estas a solo un clic de nuestros profesionales que estarán a tu disposición.</h2>
                 </div>
               </div>
               <div class="carousel-item">
@@ -77,7 +77,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="atnP">Atencion Personalizada</h1>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-                    <h2 class="titulo2">En muestro wahtsapp respondemos todas tus dudas y te ayudamos a tomar la mejor decicion</h2>
+                    <h2 class="titulo2">En muestro WhatsApp respondemos todas tus dudas y te ayudamos a tomar la mejor decisión.</h2>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
           <div class="estudioMovil">
             <h1 class="titulo tituloMovil ">Estudios Cadoche</h1>
             <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-            <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
+            <h2 class="titulo2">Eestudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
           </div>
         </section>
         <section class="referencia">
@@ -106,7 +106,7 @@
           </div>
           <div class="sucursal2" id="#ubicacion">
             <h2>Ubicacion</h2>
-            <p>Te esperamos en nuestro estudio visitanos y conoce nuestro equipo capasitado para darte una experiencia que necesitas patra tu caso, estaras tranquilo bajo la defenza de nuestros profecionales</p>
+            <p>Te esperamos en nuestro estudio visítanos y conoce nuestro equipo capacitado para darte una experiencia que necesitas para tu caso, estarás tranquilo bajo la defensa de nuestros profesionales</p>
           </div>
         </section>
       <section class="servicios" id="servicios">
@@ -116,7 +116,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
               <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
             </svg>
-            <h4>atencion personalizada las 24 horas</h2>
+            <h4>Atención personalizada las 24 horas</h2>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61px" height="61" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
@@ -170,7 +170,7 @@
             <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
             <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
           </svg>
-          <h3>Visitanos en nuestra oficina en FLORIDA 765</h3>
+          <h3>Visitanos en nuestra oficina en FLORIDA 375</h3>
         </div>
       </div>
       </section>
@@ -185,16 +185,16 @@
       </section>
       <section class="infoCliente" id="formulario">
         <div class="prefiere">
-          <h2>Si prefieres que te contactemos nosotros dejanos tu informacion</h2>
+          <h2>Si prefieres que te contactemos nosotros déjanos tu información</h2>
         </div>
         <form action="https://formsubmit.co/barriosarom@gmail.com" method="POST">
           <div class="formulario">
             <label for="nombre"> Nombre </label>
-            <input type="text" name="nombre" id="nombre" placeholder="ejemplo">
+            <input type="text" name="nombre" id="nombre" placeholder="nombre">
             <label for="apellido">Apellido</label>
-            <input type="text" name="apellido" id="apellido" placeholder="ejemplo">
+            <input type="text" name="apellido" id="apellido" placeholder="apellido">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="@ejemplo">
+            <input type="email" name="email" id="email" placeholder="correo@ejemplo.com">
             <label for="numeroDeTelefono">Numero de telefono</label>
             <input type="number" name="number" id="number" placeholder="11 2345 6789">
             <label for="comentario">Dejanos un comentario</label>
@@ -220,20 +220,11 @@
         <div class="ft">
           <h4>contacto</h4>
           <ul class="list-unstyled text-small">
-            <li><p>11 3048 4140</p></li>
-            <li><p>barriosarom@gmail.com</p></li>
-            <li><p>florida 765</p></li>
-            <li><p>ejemplo</p></li>
+            <li><p>1161433236</p></li>
+            <li><p>siniestros@estudiocadoche.con</p></li>
+            <li><p>FLORIDA 375</p></li>
+          </ul>  
         </div>
-        <div class="ft">
-          <h4>contacto</h4>
-          <ul class="list-unstyled text-small">
-            <li><p>11 3048 4140</p></li>
-            <li><p>barriosarom@gmail.com</p></li>
-            <li><p>florida 765</p></li>
-            <li><p>ejemplo</p></li>
-        </div>
-
       </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
