--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
+<link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +15,7 @@
   <div class="btn-ws">
     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank" ><img src="./img/whatsapp.png" class="icon-ws" alt=""></a>
   </div>
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg barra-nave">
         <div class="container-fluid">
             <a class="logo navbar-brand" href="index.html"><img src="./img/logo.png" class="logoEC" alt="logo aya"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +43,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
                   <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
                   <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg> florida 765 <br>
+                </svg> Florida 375 <br>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                   <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
                 </svg> <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank">1161433236</a>
@@ -54,7 +56,7 @@
       </nav>
       <section class="face">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner ">
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./img/fondo.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
@@ -69,7 +71,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="ganar">¡NO NOS PAGÁS SI NO GANAMOS!</h2>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-                    <h2 class="titulo2">Estas a solo un clic de nuestros profesionales que estarán a tu disposición.</h2>
+                    <h2 class="titulo2">Estas a solo un click de nuestros profesionales que estarán a tu disposición.</h2>
                 </div>
               </div>
               <div class="carousel-item">
@@ -98,7 +100,45 @@
             <h2 class="titulo2">Eestudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
           </div>
         </section>
-        <section class="referencia">
+        
+        <section class="referencia" style="height: 40vh;">
+          <a href="https://www.google.com/maps/place/Estudio+Cadoche/@-34.6037057,-58.3777242,17z/data=!4m18!1m9!3m8!1s0x95bccacdaf8a1517:0x5d271d79bddc7147!2sEstudio+Cadoche!8m2!3d-34.6037057!4d-58.3751493!9m1!1b1!16s%2Fg%2F11h7s44p82!3m7!1s0x95bccacdaf8a1517:0x5d271d79bddc7147!8m2!3d-34.6037057!4d-58.3751493!9m1!1b1!16s%2Fg%2F11h7s44p82?entry=ttu" target="_blank">
+          <div>
+            <div class="swiffy-slider slider-item-helper slider-item-show3 slider-item-reveal" >
+              <ul class="slider-container">
+
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (2).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (3).png" style="border-radius: 3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (4).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (6).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (5).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (4).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (3).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (2).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (1).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (10).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;" ><img src="/img/opiniones/opinion (9).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (8).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (7).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (6).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (5).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (4).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (3).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (2).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (1).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+              </ul>
+            </a>
+              <button type="button" class="slider-nav"></button>
+              <button type="button" class="slider-nav slider-nav-next"></button>
+          
+              <div class="slider-indicators">
+                  <button class="active"></button>
+                  <button></button>
+                  <button></button>
+              </div>
+          </div>
+          </div>
+
         </section>
         <section class="ubicacion" id="ubicacion">
           <div class="sucursal1">
@@ -209,7 +249,7 @@
           <p>En servicio desde <br> 1998-2023</p>
         </div>
         <div class="ft">
-          <h4>Profecionales</h4>
+          <h4>Profesionales</h4>
           <ul class="list-unstyled text-small">
             <li><p>Nombre apellido</p></li>
             <li><p>Nombre apellido</p></li>
@@ -228,5 +268,6 @@
       </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
