guardar ultimo cambio

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./img/fondo.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="estudio">Estudios Cadoche</h1>
+                    <h1 class="estudio">Estudio Cadoche</h1>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral.</h2>
                     
@@ -95,7 +95,7 @@
         </section>
         <section class="dispMovil">
           <div class="estudioMovil">
-            <h1 class="titulo tituloMovil ">Estudios Cadoche</h1>
+            <h1 class="titulo tituloMovil ">Estudio Cadoche</h1>
             <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
             <h2 class="titulo2">Eestudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
           </div>
@@ -107,7 +107,7 @@
             <div class="swiffy-slider slider-item-helper slider-item-show3 slider-item-reveal" >
               <ul class="slider-container">
 
-                  <li style="background-color: transparent;"><img src="/img/opiniones/opinion (2).png" style="border-radius:3px;width: 100%;height: auto;"></li>
+                  <li style="background-color: transparent;"><img src="./img/opiniones/opinion (2).png" style="border-radius:3px;width: 100%;height: auto;"></li>
                   <li style="background-color: transparent;"><img src="/img/opiniones/opinion (3).png" style="border-radius: 3px;width: 100%;height: auto;"></li>
                   <li style="background-color: transparent;"><img src="/img/opiniones/opinion (4).png" style="border-radius:3px;width: 100%;height: auto;"></li>
                   <li style="background-color: transparent;"><img src="/img/opiniones/opinion (6).png" style="border-radius:3px;width: 100%;height: auto;"></li>
@@ -163,20 +163,20 @@
               <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
               <path d="M8.256 14a4.474 4.474 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10c.26 0 .507.009.74.025.226-.341.496-.65.804-.918C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4s1 1 1 1h5.256Z"/>
             </svg>
-            <h4>Mediaciones</h4>
+            <h4>Reclamos extrajudiciales Y judiciales  a compañia de seguro</h4>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-vector-pen" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10.646.646a.5.5 0 0 1 .708 0l4 4a.5.5 0 0 1 0 .708l-1.902 1.902-.829 3.313a1.5 1.5 0 0 1-1.024 1.073L1.254 14.746 4.358 4.4A1.5 1.5 0 0 1 5.43 3.377l3.313-.828L10.646.646zm-1.8 2.908-3.173.793a.5.5 0 0 0-.358.342l-2.57 8.565 8.567-2.57a.5.5 0 0 0 .34-.357l.794-3.174-3.6-3.6z"/>
               <path fill-rule="evenodd" d="M2.832 13.228 8 9a1 1 0 1 0-1-1l-4.228 5.168-.026.086.086-.026z"/>
             </svg>
-            <h4>Demandas Judiciales</h4>
+            <h4>Reclamos  extrajudiciales Y judiciales contra A.R.T.</h4>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
               <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
             </svg>
-            <h4>Asesoramiento Legal</h4>
+            <h4>Asesoramiento Legal Personlizado</h4>
           </div>
         </div>
       </section>
