--- a/index.html
+++ b/index.html
@@ -243,6 +243,6 @@
         </form>
       </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
