le puse el acento a ubicacion y rectifique la redaccion

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
 <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
+<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,8 +146,8 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0182011064708!2d-58.37772422477146!3d-34.60370125749644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacdaf8a1517%3A0x5d271d79bddc7147!2sEstudio%20Cadoche!5e0!3m2!1ses-419!2sar!4v1694572066874!5m2!1ses-419!2sar" class="mapa" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="sucursal2" id="#ubicacion">
-            <h2>Ubicacion</h2>
-            <p>Te esperamos en nuestro estudio en Florida 375 4º A visítanos y conoce nuestro equipo capacitado para darte una experiencia que necesitas para tu caso, estarás tranquilo bajo la defensa de nuestros profesionales.</p>
+            <h2>Ubicación</h2>
+            <p>Te esperamos en nuestro estudio en Florida 375 4º A, visítanos y conoce nuestro equipo capacitado para darte la experiencia que necesitas para tu caso, estarás tranquilo bajo la defensa de nuestros profesionales.</p>
           </div>
         </section>
       <section class="servicios" id="servicios">
