--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
               <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
             </svg>
-            <h4>Atención personalizada las 24 horas</h2>
+            <h4>Atención personalizada las 24 horas.</h2>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61px" height="61" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
               <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
               <path d="M8.256 14a4.474 4.474 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10c.26 0 .507.009.74.025.226-.341.496-.65.804-.918C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4s1 1 1 1h5.256Z"/>
             </svg>
-            <h4>Reclamos extrajudiciales Y judiciales  a compañia de seguro</h4>
+            <h4>Reclamos extrajudiciales Y judiciales  a compañia de seguro.</h4>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-vector-pen" viewBox="0 0 16 16">
@@ -177,7 +177,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
               <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
             </svg>
-            <h4>Asesoramiento Legal Personlizado</h4>
+            <h4>Asesoramiento legal personlizado</h4>
           </div>
         </div>
       </section>
@@ -226,7 +226,7 @@
       </section>
       <section class="infoCliente" id="formulario">
         <div class="prefiere">
-          <h2>Si prefieres que te contactemos nosotros déjanos tu información</h2>
+          <h2>Si prefieres que te contactemos nosotros déjanos tu información.</h2>
         </div>
         <form action="https://formsubmit.co/barriosarom@gmail.com" method="POST">
           <div class="formulario">
